==> nguyendao3154/iro3/apps/uart/uart.c <==
#include <uart.h>
#include "tools.h"
#include "gpio.h"

LOCAL void UART_Reply(uint8_t *data, uint8_t *msg_id, ERR_E err_code)
{
    uint8_t buffer_size;
    buffer_size = sprintf(print_str, "[%s,%d,%s]", msg_id, err_code, data);
    for (uint8_t index; index < buffer_size; index++)
    {
        LPUART_WriteByte(LPUART0, print_str[index]);
        while (!(kLPUART_TxDataRegEmptyFlag & LPUART_GetStatusFlags(LPUART0)))
            ;
    }
}

PUBLIC void UART_Init(void)
{
    //init UART here
    const lpuart_config_t uart_config = {
        .baudRate_Bps = 9600,
        .parityMode = kLPUART_ParityDisabled,
        .dataBitsCount = kLPUART_EightDataBits,
        .isMsb = false,
        .stopBitCount = kLPUART_OneStopBit,
        .txFifoWatermark = 0,
        .rxFifoWatermark = 1,
        .enableRxRTS = false,
        .enableTxCTS = false,
        .txCtsSource = kLPUART_CtsSourcePin,
        .txCtsConfig = kLPUART_CtsSampleAtStart,
        .rxIdleType = kLPUART_IdleTypeStartBit,
        .rxIdleConfig = kLPUART_IdleCharacter1,
        .enableTx = true,
        .enableRx = true
    };
    LPUART_Init(LPUART0, &uart_config, 24000000UL);
    sprintf(print_str, "UART init done\r\n");
    LPUART_WriteBlocking(LPUART0, (uint8_t *)print_str, (uint16_t)strlen(print_str) - 1);
    LPUART_EnableInterrupts(LPUART0, kLPUART_RxDataRegFullInterruptEnable);
    EnableIRQ(LPUART0_IRQn);
}

PUBLIC void UART_UartPuts(uint8_t *s)
{
    uint8_t buffer_size;
    buffer_size = sprintf(print_str, "%s", s);

    for (uint8_t index; index < buffer_size; index++)
    {
        LPUART_WriteByte(LPUART0, print_str[index]);
        while (!(kLPUART_TxDataRegEmptyFlag & LPUART_GetStatusFlags(LPUART0)))
            ;
    }
}
