==> Manh07/CODE_EXAMPLE_CHIP/Chip_Renesas/KRD/BU_TDS/src/apps/uart/uart.c <==
#include <uart.h>
#include "tools.h"
#include "gpio.h"
#include "user_config.h"
#include "adc.h"
#include "productId.h"
#include "uartHandle.h"
#include "heatControl.h"
#include "thermo.h"
#include "Config_SCI6.h"
#include "uartVoice.h"
#define CMD_ID_FOR_TEST_WIFI 21

LOCAL void UART_Reply(char * data,char* msg_id,ERR_E err_code)
{
    sprintf(print_str,"[%s,%d,%s]",msg_id,err_code,data);
    R_SCI6_AsyncTransmit((uint8_t *)print_str, (uint16_t)strlen(print_str));

}

PUBLIC void UART_Init(void)
{
    //init UART here
//    R_Config_SCI12_Create();
    /* Set SCI2 receive buffer address and enable receive interrupt */
    R_Config_SCI6_Serial_Receive((uint8_t *)&g_rx_char, 1);
    /* Enable SCI2 operation */
    R_Config_SCI6_Start();

    sprintf(print_str, "[MCU_RESET,0,]");
    R_SCI6_AsyncTransmit((uint8_t *)print_str, (uint16_t)strlen(print_str));
}

PUBLIC void UART_UartPuts (char *s)
{
    sprintf(print_str,"%s", s);
    R_SCI6_AsyncTransmit((uint8_t *)print_str, (uint16_t)strlen(print_str));
}
